--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <div class="header-light-group1">
                     <a href="#" class="feedback">피드백</a>
                     <a href="#" class="lang">한국어</a>
+                    <!-- 아래꺾쇠 어떻게 만들지...ㅠㅠ -->
                     <a href="#" class="inquiry">문의 등록</a>
                 </div>
                     <a href="#" class="login">로그인</a>
@@ -33,7 +34,7 @@
             <div class="support-center">
                 <h5>고객 지원 센터</h5>
                 <!-- 돋보기 모양 만들어 넣는법/디스코드 홈페이지 확인하니 
-                    svg로 넣는데 어떻게 활용해야 하는지 물어보기 -->
+                    svg로 넣는데 어떻게 활용해야 하지...ㅠㅠ -->
                 <input type="search" placeholder="검색">
             </div>
         </section>
