--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
         </h1>
         <div class="header-light">
             <div class="pc-view-header">
-                <div class="header-light-group1">
+                <div class="ham">
                     <a href="#" class="feedback">피드백</a>
                     <a href="#" class="lang">한국어</a>
-                    <!-- 아래꺾쇠 어떻게 만들지...ㅠㅠ -->
-                    <a href="#" class="inquiry">문의 등록</a>
+                    <a href="#" class="inquiry">문의 등록</ba>
                 </div>
                     <a href="#" class="login">로그인</a>
             </div>
@@ -33,9 +32,13 @@
         <section id="main-content">
             <div class="support-center">
                 <h5>고객 지원 센터</h5>
-                <!-- 돋보기 모양 만들어 넣는법/디스코드 홈페이지 확인하니 
-                    svg로 넣는데 어떻게 활용해야 하지...ㅠㅠ -->
-                <input type="search" placeholder="검색">
+                <div class="serch-bar">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" focusable="false" viewBox="0 0 12 12" class="search-iconb" aria-hidden="true">
+                        <circle cx="4.5" cy="4.5" r="4" fill="none" stroke="currentColor"></circle>
+                        <path stroke="currentColor" stroke-linecap="round" d="M11 11L7.5 7.5"></path>
+                    </svg>
+                 <input type="search" placeholder="검색">
+                </div>
             </div>
         </section>
 
@@ -47,6 +50,9 @@
                 <ul class="menu">
                     <a href="#">
                         <li class="notice">
+                            <figure>
+                                <img src="img/Norice.svg" alt="공지사항">
+                            </figure>
                             <h2>공지 사항</h2>
                             <hr>
                             <h3>들어보세요. 무언가 심상치 않은 일이 벌어지고 있습니다.</h3>
@@ -54,85 +60,109 @@
                     </a>
                     <a href="#">
                         <li class="interface">
-                        <h2>Discord 인터페이스</h2>
-                        <hr>
+                        <figure>
+                            <img src="img/interface.svg" alt="인터페이스">
+                        </figure>
+                            <h2>Discord 인터페이스</h2>
                         <h3>이 버튼은 무엇인가요?!</h3>
                     </li>
                 </a>
                 <a href="#">
                     <li class="ID-setting">
+                        <figure>
+                            <img src="img/ID.svg" alt="계정설정">
+                        </figure>
                         <h2>계정 설정</h2>
-                        <hr>
                         <h3>당신도 당신의 계정도 특별한 눈송이입니다.</h3>
                     </li>
                 </a>
                 <a href="#">
                     <li class="starting">
+                        <figure>
+                            <img src="img/strating.svg" alt="시작하기">
+                        </figure>
                         <h2>시작하기</h2>
-                        <hr>
                         <h3>첫 단추를 제대로 끼워야 합니다!</h3>
                     </li>
                 </a>
                 <a href="#">
                     <li class="sever-setting">
+                        <figure>
+                            <img src="img/Sever-Setting.svg" alt="서버설정">
+                        </figure>
                         <h2>서버 설정</h2>
-                        <hr>
                         <h3>실내 장식 만큼 재미있는 것.</h3>
                     </li>
                 </a>
                 <a href="#">
                     <li class="community-program">
+                        <figure>
+                            <img src="img/Community.svg" alt="커뮤니티 프로그램">
+                        </figure>
                         <h2>커뮤니티 프로그램</h2>
-                        <hr>
                         <h3>HypeSquaders를 위한 광고,파트너를 위한 파티</h3>
                     </li>
                 </a>
+            </ul>
+            <ul class="menu">
+
                 <a href="#">
                     <li class="nitro">
+                        <figure>
+                            <img src="img/Nitro.svg" alt="니트로">
+                        </figure>
                         <h2>Nitro</h2>
-                        <hr>
                         <h3>쓰러질 때까지 쇼핑하시면 안돼요! 저희가 도와드릴게요.</h3>
                     </li>
                 </a>
                 <a href="#">
                     <li class="Bill">
+                        <figure>
+                            <img src="img/Bill.svg" alt="청구서">
+                        </figure>
                         <h2>청구서</h2>
-                        <hr>
                         <h3>은행 계좌 잔액을 보는 기분</h3>
                     </li>
                 </a>
                 <a href="#">
                     <li class="Security">
+                        <figure>
+                            <img src="img/Security.svg" alt="신뢰와보안">
+                        </figure>
                         <h2>신뢰&보안</h2>
-                        <hr>
                         <h3>안전하고 건전하게</h3>
                     </li>
                 </a>
                 <a href="#">
                     <li class="Questions">
+                        <figure>
+                            <img src="img/Questions.svg" alt="자주 묻는 질문">
+                        </figure>
                         <h2>자주 묻는 질문</h2>
-                        <hr>
                         <h3>스스로 해결해 보아요.</h3>
                     </li>
                 </a>
             </ul>
-            <section class="section-intro">
-                <pre></pre>
+            <div>
                 <h2>도움을 받을 수 있는 다른 방법</h2>
-            </section>
-            <section class="category-grid">
-                <ul class="menu">
-                    <a href="#">
-                        <li class="game">
+            </div>
+                <section class="category-grid">
+                    <ul class="menu">
+                        <a href="#">
+                            <li class="game">
+                                <figure>
+                                    <img src="img/game.svg" alt="게임 개발자">
+                                </figure>
                             <h2>게임 개발자</h2>
-                            <hr>
                             <h3>Discord의 API와 SDK를 이용한 봇,앱,게임 개발 지원의 집!</h3>
                         </li>
                     </a>
                     <a href="#">
                         <li class="Twitter">
+                            <figure>
+                                <img src="img/Twitter.svg" alt="트위터">
+                            </figure>
                             <h2>Twitter</h2>
-                            <hr>
                             <h3>질문이 있으신가요? 저희에게 트윗을 보내주세요!</h3>
                         </li>
                     </a>
@@ -195,7 +225,7 @@
                 <a href="#" class="link-a">회사</a>
                 <a href="#" class="link-b">직업</a>
                 <span class="link-sep"> ─ </span>
-                <span class="link-hiring">구인</span>
+                <a href="#">구인</a>
             </div>
             <div class="link-item">
                 <a href="#" class="link-a">블로그</a>
