--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="ham">
                     <a href="#" class="feedback">피드백</a>
                     <a href="#" class="lang">한국어</a>
-                    <a href="#" class="inquiry">문의 등록</ba>
+                    <a href="#" class="inquiry">문의 등록</a>
                 </div>
                     <a href="#" class="login">로그인</a>
             </div>
@@ -47,9 +47,9 @@
                 <p> 계정 설정부터 승인까지 Discord와 관련된 모든것을 문의하세요.<br>Discord를 시작한 지 얼마 안되어 팁을 찾고 계신가요? 그렇다면, 저희의 <a href="#" class="suppoter-discord">초보자를 위한 가이드를 확인해 보세요!</a></p>
             </section>
             <section class="category-grid">
-                <ul class="menu">
+                <ul class="menu1">
                     <a href="#">
-                        <li class="notice">
+                        <li class="box-shadow notice">
                             <figure>
                                 <img src="img/Norice.svg" alt="공지사항">
                             </figure>
@@ -59,110 +59,121 @@
                         </li>
                     </a>
                     <a href="#">
-                        <li class="interface">
+                        <li class="box-shadow interface">
                         <figure>
                             <img src="img/interface.svg" alt="인터페이스">
                         </figure>
                             <h2>Discord 인터페이스</h2>
-                        <h3>이 버튼은 무엇인가요?!</h3>
+                            <hr>
+                            <h3>이 버튼은 무엇인가요?!</h3>
                     </li>
                 </a>
                 <a href="#">
-                    <li class="ID-setting">
+                    <li class="box-shadow ID-setting">
                         <figure>
                             <img src="img/ID.svg" alt="계정설정">
                         </figure>
                         <h2>계정 설정</h2>
+                        <hr>
                         <h3>당신도 당신의 계정도 특별한 눈송이입니다.</h3>
                     </li>
                 </a>
                 <a href="#">
-                    <li class="starting">
+                    <li class="box-shadow starting">
                         <figure>
                             <img src="img/strating.svg" alt="시작하기">
                         </figure>
                         <h2>시작하기</h2>
+                        <hr>
                         <h3>첫 단추를 제대로 끼워야 합니다!</h3>
                     </li>
                 </a>
                 <a href="#">
-                    <li class="sever-setting">
+                    <li class="box-shadow sever-setting">
                         <figure>
                             <img src="img/Sever-Setting.svg" alt="서버설정">
                         </figure>
                         <h2>서버 설정</h2>
+                        <hr>
                         <h3>실내 장식 만큼 재미있는 것.</h3>
                     </li>
                 </a>
                 <a href="#">
-                    <li class="community-program">
+                    <li class="box-shadow community-program">
                         <figure>
                             <img src="img/Community.svg" alt="커뮤니티 프로그램">
                         </figure>
                         <h2>커뮤니티 프로그램</h2>
+                        <hr>
                         <h3>HypeSquaders를 위한 광고,파트너를 위한 파티</h3>
                     </li>
                 </a>
             </ul>
-            <ul class="menu">
+            <ul class="menu2">
 
                 <a href="#">
-                    <li class="nitro">
+                    <li class="box-shadow nitro">
                         <figure>
                             <img src="img/Nitro.svg" alt="니트로">
                         </figure>
                         <h2>Nitro</h2>
+                        <hr>
                         <h3>쓰러질 때까지 쇼핑하시면 안돼요! 저희가 도와드릴게요.</h3>
                     </li>
                 </a>
                 <a href="#">
-                    <li class="Bill">
+                    <li class="box-shadow Bill">
                         <figure>
                             <img src="img/Bill.svg" alt="청구서">
                         </figure>
                         <h2>청구서</h2>
+                        <hr>
                         <h3>은행 계좌 잔액을 보는 기분</h3>
                     </li>
                 </a>
                 <a href="#">
-                    <li class="Security">
+                    <li class="box-shadow Security">
                         <figure>
                             <img src="img/Security.svg" alt="신뢰와보안">
                         </figure>
                         <h2>신뢰&보안</h2>
+                        <hr>
                         <h3>안전하고 건전하게</h3>
                     </li>
                 </a>
                 <a href="#">
-                    <li class="Questions">
+                    <li class="box-shadow Questions">
                         <figure>
                             <img src="img/Questions.svg" alt="자주 묻는 질문">
                         </figure>
                         <h2>자주 묻는 질문</h2>
+                        <hr>
                         <h3>스스로 해결해 보아요.</h3>
                     </li>
                 </a>
             </ul>
-            <div>
+            <div class="help">
                 <h2>도움을 받을 수 있는 다른 방법</h2>
             </div>
                 <section class="category-grid">
-                    <ul class="menu">
+                    <ul class="menu3">
                         <a href="#">
-                            <li class="game">
+                            <li class="box-shadow game">
                                 <figure>
                                     <img src="img/game.svg" alt="게임 개발자">
                                 </figure>
                             <h2>게임 개발자</h2>
+                            <hr>
                             <h3>Discord의 API와 SDK를 이용한 봇,앱,게임 개발 지원의 집!</h3>
                         </li>
                     </a>
                     <a href="#">
-                        <li class="Twitter">
+                        <li class="box-shadow Twitter">
                             <figure>
                                 <img src="img/Twitter.svg" alt="트위터">
                             </figure>
                             <h2>Twitter</h2>
+                            <hr>
                             <h3>질문이 있으신가요? 저희에게 트윗을 보내주세요!</h3>
                         </li>
                     </a>
@@ -172,54 +183,54 @@
         </section>
     </div>
 </main>
-<footer id="end-contents" class="section">
+<footer class="section">
   <div class="content">
     <div class="hook">
         <a href="#">
             <button class="Details">자세히</button>
         </a>
-    </div>
-    <div class="app">
-        <a href="#" class="apps-browsers">
-            <img src="img/explorer.svg" alt="browsers">
-        </a>
-        <a href="#" class="apps-android">
-            <img src="img/Android.svg" alt="Android">
-        </a>
-        <a href="#" class="apps-ios">
-            <img src="img/apple.svg" alt="ios">
-        </a>
-        <a href="#" class="Windows">
-            <img src="img/Window.svg" alt="Windows">
-        </a>
-        <a href="#" class="osx">
-            <img src="img/X.svg" alt="osx">
-        </a>
-    </div>
-</div>
-    <nav class="nav">
-        <div class="footerlogo">
+        <div class="app">
             <a href="#">
-                <img src="img/discord-logo-footer.svg" alt="discord">
+                <img src="img/explorer.svg" alt="browsers">
+            </a>
+            <a href="#">
+                <img src="img/Android.svg" alt="Android">
+            </a>
+            <a href="#">
+                <img src="img/apple.svg" alt="ios">
+            </a>
+            <a href="#">
+                <img src="img/Window.svg" alt="Windows">
+            </a>
+            <a href="#">
+                <img src="img/X.svg" alt="osx">
             </a>
         </div>
-        <div class="spacer"></div>
-        <div class="links">
-            <div class="links-item">
-                <a href="#" class="link-a">다운로드</a>
-                <a href="#" class="link-b">지원</a>
-                <a href="#" class="link-c">피드백</a>
-                <a href="#" class="link-d">상태</a>
+    </div>
+    <section id="footer1">
+        <footer class="end-content">
+            <div class="footerlogo">
+                <a href="#">
+                    <img src="img/discord-logo-footer.svg" alt="discord">
+                </a>
             </div>
-        </div>
-        <div class="link-col">
-            <div class="link-item">
-                <a href="#" class="link-a">파트너</a>
-                <a href="#" class="link-b">HypeSquad</a>
-                <a href="#" class="link-c">상점</a>
-                <a href="#" class="link-d">제품 이미지</a>
+            <div class="spacer"></div>
+            <div class="links">
+                <div class="links-item">
+                    <a href="#" class="link-a">다운로드</a>
+                    <a href="#" class="link-b">지원</a>
+                    <a href="#" class="link-c">피드백</a>
+                    <a href="#" class="link-d">상태</a>
+                </div>
             </div>
-        </div>
+            <div class="link-col">
+                <div class="link-item">
+                    <a href="#" class="link-a">파트너</a>
+                    <a href="#" class="link-b">HypeSquad</a>
+                    <a href="#" class="link-c">상점</a>
+                    <a href="#" class="link-d">제품 이미지</a>
+                </div>
+            </div>
         <div class="link-col">
             <div class="link-item">
                 <a href="#" class="link-a">회사</a>
@@ -236,8 +247,8 @@
                 <a href="#" class="link-a">개인 정보 보호</a>
             </div>
         </div>
-    </nav>
-</footer>
+    </footer>
+</section>
 <button deta-testid="launcher" aria-label="고객센터">고객센터</button>
 </body>
 </html>
