--- a/index.html
+++ b/index.html
@@ -191,22 +191,23 @@
         </a>
         <div class="app">
             <a href="#">
-                <img src="img/explorer.svg" alt="browsers">
+                <img src="img/explorer.svg" art="browsers" class="browsers">
             </a>
             <a href="#">
-                <img src="img/Android.svg" alt="Android">
+                <img src="img/Android.svg" alt="Android" class="Android">
             </a>
             <a href="#">
-                <img src="img/apple.svg" alt="ios">
+                <img src="img/apple.svg" alt="ios" class="ios">
             </a>
             <a href="#">
-                <img src="img/Window.svg" alt="Windows">
+                <img src="img/Window.svg" alt="Windows" class="Windows">
             </a>
             <a href="#">
-                <img src="img/X.svg" alt="osx">
+                <img src="img/X.svg" alt="osx" class="osx">
             </a>
         </div>
     </div>
+    <hr>
     <section id="footer1">
         <footer class="end-content">
             <div class="footerlogo">
