--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             </div>
         </div>
     </header>
-    <main role="main">
     <div class="wapper">
         <section id="main-content">
             <div class="support-center">
@@ -42,11 +41,11 @@
             </div>
         </section>
 
-            <section id="intro">
+        <section id="intro">
                 <h1>도움이 필요하신가요? 저희가 도와드리겠습니다.</h1>
                 <p> 계정 설정부터 승인까지 Discord와 관련된 모든것을 문의하세요.<br>Discord를 시작한 지 얼마 안되어 팁을 찾고 계신가요? 그렇다면, 저희의 <a href="#" class="suppoter-discord">초보자를 위한 가이드를 확인해 보세요!</a></p>
-            </section>
-            <section class="category-grid">
+        </section>
+        <section class="category-grid">
                 <ul class="menu1">
                     <a href="#">
                         <li class="box-shadow notice">
@@ -66,29 +65,29 @@
                             <h2>Discord 인터페이스</h2>
                             <hr>
                             <h3>이 버튼은 무엇인가요?!</h3>
-                    </li>
-                </a>
-                <a href="#">
-                    <li class="box-shadow ID-setting">
+                        </li>
+                     </a>
+                     <a href="#">
+                        <li class="box-shadow ID-setting">
                         <figure>
                             <img src="img/ID.svg" alt="계정설정">
                         </figure>
                         <h2>계정 설정</h2>
                         <hr>
                         <h3>당신도 당신의 계정도 특별한 눈송이입니다.</h3>
-                    </li>
-                </a>
-                <a href="#">
-                    <li class="box-shadow starting">
+                        </li>
+                    </a>
+                    <a href="#">
+                        <li class="box-shadow starting">
                         <figure>
                             <img src="img/strating.svg" alt="시작하기">
                         </figure>
                         <h2>시작하기</h2>
                         <hr>
                         <h3>첫 단추를 제대로 끼워야 합니다!</h3>
-                    </li>
-                </a>
-                <a href="#">
+                        </li>
+                    </a>
+                    <a href="#">
                     <li class="box-shadow sever-setting">
                         <figure>
                             <img src="img/Sever-Setting.svg" alt="서버설정">
@@ -97,41 +96,38 @@
                         <hr>
                         <h3>실내 장식 만큼 재미있는 것.</h3>
                     </li>
-                </a>
-                <a href="#">
-                    <li class="box-shadow community-program">
+                    </a>
+                    <a href="#">
+                      <li class="box-shadow community-program">
                         <figure>
                             <img src="img/Community.svg" alt="커뮤니티 프로그램">
                         </figure>
                         <h2>커뮤니티 프로그램</h2>
                         <hr>
                         <h3>HypeSquaders를 위한 광고,파트너를 위한 파티</h3>
-                    </li>
-                </a>
-            </ul>
-            <ul class="menu2">
-
-                <a href="#">
-                    <li class="box-shadow nitro">
-                        <figure>
-                            <img src="img/Nitro.svg" alt="니트로">
-                        </figure>
+                     </li>
+                    </a>                    
+                    <a href="#">
+                        <li class="box-shadow nitro">
+                            <figure>
+                                <img src="img/Nitro.svg" alt="니트로">
+                            </figure>
                         <h2>Nitro</h2>
                         <hr>
                         <h3>쓰러질 때까지 쇼핑하시면 안돼요! 저희가 도와드릴게요.</h3>
-                    </li>
-                </a>
-                <a href="#">
-                    <li class="box-shadow Bill">
+                        </li>
+                    </a>
+                   <a href="#">
+                     <li class="box-shadow Bill">
                         <figure>
                             <img src="img/Bill.svg" alt="청구서">
                         </figure>
                         <h2>청구서</h2>
                         <hr>
                         <h3>은행 계좌 잔액을 보는 기분</h3>
-                    </li>
-                </a>
-                <a href="#">
+                     </li>
+                    </a>
+                  <a href="#">
                     <li class="box-shadow Security">
                         <figure>
                             <img src="img/Security.svg" alt="신뢰와보안">
@@ -140,8 +136,8 @@
                         <hr>
                         <h3>안전하고 건전하게</h3>
                     </li>
-                </a>
-                <a href="#">
+                  </a>
+                  <a href="#">
                     <li class="box-shadow Questions">
                         <figure>
                             <img src="img/Questions.svg" alt="자주 묻는 질문">
@@ -150,12 +146,12 @@
                         <hr>
                         <h3>스스로 해결해 보아요.</h3>
                     </li>
-                </a>
-            </ul>
+                  </a>
+                </ul>
             <div class="help">
                 <h2>도움을 받을 수 있는 다른 방법</h2>
             </div>
-                <section class="category-grid">
+                <section class="category-menu3">
                     <ul class="menu3">
                         <a href="#">
                             <li class="box-shadow game">
@@ -178,17 +174,17 @@
                         </li>
                     </a>
                 </ul>
-            </section>
-            
+            </section>            
         </section>
     </div>
-</main>
 <footer class="section">
   <div class="content">
     <div class="hook">
-        <a href="#">
-            <button class="Details">자세히</button>
-        </a>
+      <div class="Detail">
+         <a href="#">
+         <button class="Details">자세히</button>
+         </a>
+      </div>
         <div class="app">
             <a href="#">
                 <img src="img/explorer.svg" art="browsers" class="browsers">
@@ -206,50 +202,50 @@
                 <img src="img/X.svg" alt="osx" class="osx">
             </a>
         </div>
-    </div>
-    <hr>
-    <section id="footer1">
-        <footer class="end-content">
-            <div class="footerlogo">
-                <a href="#">
-                    <img src="img/discord-logo-footer.svg" alt="discord">
-                </a>
+        <hr>
+        <div class="footerlogo">
+            <div class="footerimg">
+                <img src="img/discord-logo-footer.svg" alt="discord">
             </div>
-            <div class="spacer"></div>
-            <div class="links">
-                <div class="links-item">
-                    <a href="#" class="link-a">다운로드</a>
-                    <a href="#" class="link-b">지원</a>
-                    <a href="#" class="link-c">피드백</a>
-                    <a href="#" class="link-d">상태</a>
+            <div class="interval">
+            </div>
+            <div class="links">                
+                <div class="link1">
+                    <a href="#">다운로드</a>
+                    <a href="#">지원</a>
+                    <a href="#">피드백</a>
+                    <a href="#">상태</a>
                 </div>
-            </div>
-            <div class="link-col">
-                <div class="link-item">
-                    <a href="#" class="link-a">파트너</a>
-                    <a href="#" class="link-b">HypeSquad</a>
-                    <a href="#" class="link-c">상점</a>
-                    <a href="#" class="link-d">제품 이미지</a>
+                <div class="link1">
+                    <a href="#">파트너</a>
+                    <a href="#">HypeSquad</a>
+                    <a href="#">상점</a>
+                    <a href="#">제품 이미지</a>
                 </div>
-            </div>
-        <div class="link-col">
-            <div class="link-item">
-                <a href="#" class="link-a">회사</a>
-                <a href="#" class="link-b">직업</a>
-                <span class="link-sep"> ─ </span>
-                <a href="#">구인</a>
-            </div>
-            <div class="link-item">
-                <a href="#" class="link-a">블로그</a>
-            </div>
-            <div class="link-item">
-                <a href="#" class="link-a">조건</a>
-                <span class="link-sep">&</span>
-                <a href="#" class="link-a">개인 정보 보호</a>
+                <div class="link1">
+                    <a href="#">회사</a>
+                    <div class="pasting">
+                        <a href="#">직업</a>
+                        <span class="middle">ㅡ</span>
+                        <span class="text">구인</span>
+                    </div>
+                    <a href="#">블로그</a>
+                    <div class="pasting">
+                        <a href="#">조건</a>
+                        <span class="middle">&</span>
+                        <a href="#">개인 정보 보호</a>
+                    </div>
+                </div>
             </div>
         </div>
-    </footer>
-</section>
-<button deta-testid="launcher" aria-label="고객센터">고객센터</button>
+        <div class="Service-button">
+            <button class="Service-center">
+                <span class="buttons">
+                <svg width="20" height="20" viewBox="0 0 20 20" aria-hidden="true"><g id="Layer_4"><path d="M11,12.3V13c0,0-1.8,0-2,0v-0.6c0-0.6,0.1-1.4,0.8-2.1c0.7-0.7,1.6-1.2,1.6-2.1c0-0.9-0.7-1.4-1.4-1.4 c-1.3,0-1.4,1.4-1.5,1.7H6.6C6.6,7.1,7.2,5,10,5c2.4,0,3.4,1.6,3.4,3C13.4,10.4,11,10.8,11,12.3z"></path><circle cx="10" cy="15" r="1"></circle><path d="M10,2c4.4,0,8,3.6,8,8s-3.6,8-8,8s-8-3.6-8-8S5.6,2,10,2 M10,0C4.5,0,0,4.5,0,10s4.5,10,10,10s10-4.5,10-10S15.5,0,10,0 L10,0z"></path></g></svg>
+                </span>&nbsp;&nbsp;<span>고객센터</span>
+            </button>
+          </div>   
+</footer>
+   
 </body>
 </html>
