--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
                 </div>
             </div>
         </section>
-
         <section id="intro">
                 <h1>도움이 필요하신가요? 저희가 도와드리겠습니다.</h1>
                 <p> 계정 설정부터 승인까지 Discord와 관련된 모든것을 문의하세요.<br>Discord를 시작한 지 얼마 안되어 팁을 찾고 계신가요? 그렇다면, 저희의 <a href="#" class="suppoter-discord">초보자를 위한 가이드를 확인해 보세요!</a></p>
@@ -173,13 +172,13 @@
                             <h3>질문이 있으신가요? 저희에게 트윗을 보내주세요!</h3>
                         </li>
                     </a>
-                </ul>
-            </section>            
+                 </ul>
+               </section>        
         </section>
-    </div>
-<footer class="section">
-  <div class="content">
-    <div class="hook">
+    
+     <footer class="section">
+      <div class="content">
+      <div class="hook">
       <div class="Detail">
          <a href="#">
          <button class="Details">자세히</button>
@@ -238,14 +237,15 @@
                 </div>
             </div>
         </div>
-        <div class="Service-button">
+        <div class="Service">
             <button class="Service-center">
                 <span class="buttons">
-                <svg width="20" height="20" viewBox="0 0 20 20" aria-hidden="true"><g id="Layer_4"><path d="M11,12.3V13c0,0-1.8,0-2,0v-0.6c0-0.6,0.1-1.4,0.8-2.1c0.7-0.7,1.6-1.2,1.6-2.1c0-0.9-0.7-1.4-1.4-1.4 c-1.3,0-1.4,1.4-1.5,1.7H6.6C6.6,7.1,7.2,5,10,5c2.4,0,3.4,1.6,3.4,3C13.4,10.4,11,10.8,11,12.3z"></path><circle cx="10" cy="15" r="1"></circle><path d="M10,2c4.4,0,8,3.6,8,8s-3.6,8-8,8s-8-3.6-8-8S5.6,2,10,2 M10,0C4.5,0,0,4.5,0,10s4.5,10,10,10s10-4.5,10-10S15.5,0,10,0 L10,0z"></path></g></svg>
-                </span>&nbsp;&nbsp;<span>고객센터</span>
+                <svg width="20" height="20" viewBox="0 0 20 20" aria-hidden="true"><g id="Layer_4"><path d="M11,12.3V13c0,0-1.8,0-2,0v-0.6c0-0.6,0.1-1.4,0.8-2.1c0.7-0.7,1.6-1.2,1.6-2.1c0-0.9-0.7-1.4-1.4-1.4 c-1.3,0-1.4,1.4-1.5,1.7H6.6C6.6,7.1,7.2,5,10,5c2.4,0,3.4,1.6,3.4,3C13.4,10.4,11,10.8,11,12.3z"></path><circle cx="10" cy="15" r="1"></circle><path d="M10,2c4.4,0,8,3.6,8,8s-3.6,8-8,8s-8-3.6-8-8S5.6,2,10,2 M10,0C4.5,0,0,4.5,0,10s4.5,10,10,10s10-4.5,10-10S15.5,0,10,0 L10,0z"></path></g></svg> &nbsp;고객센터</span>
             </button>
-          </div>   
-</footer>
+        </div>    
+      </footer>
+    </div>
+   
    
 </body>
 </html>
