--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <a href="#" class="lang">한국어</a>
                     <a href="#" class="inquiry">문의 등록</a>
                 </div>
+                <div class="mobile-view"></div>
                     <a href="#" class="login">로그인</a>
             </div>
         </div>
