--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Discord</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="index.css">
+    <link rel="shortcut icon" href="img/111.ico" type="image/x-icon">
     
 </head>
 <body>
@@ -47,132 +48,132 @@
         </section>
         <section class="category-grid">
                 <ul class="menu1">
-                    <a href="#">
-                        <li class="box-shadow notice">
+                    <li class="box-shadow notice">
+                            <a href="#">
                             <figure>
                                 <img src="img/Norice.svg" alt="공지사항">
                             </figure>
                             <h2>공지 사항</h2>
                             <hr>
                             <h3>들어보세요. 무언가 심상치 않은 일이 벌어지고 있습니다.</h3>
+                        </a>
                         </li>
-                    </a>
-                    <a href="#">
-                        <li class="box-shadow interface">
+                    <li class="box-shadow interface">
+                        <a href="#">
                         <figure>
                             <img src="img/interface.svg" alt="인터페이스">
                         </figure>
                             <h2>Discord 인터페이스</h2>
                             <hr>
                             <h3>이 버튼은 무엇인가요?!</h3>
-                        </li>
-                     </a>
+                        </a>
+                    </li>
+                    <li class="box-shadow ID-setting">
                      <a href="#">
-                        <li class="box-shadow ID-setting">
                         <figure>
                             <img src="img/ID.svg" alt="계정설정">
                         </figure>
                         <h2>계정 설정</h2>
                         <hr>
                         <h3>당신도 당신의 계정도 특별한 눈송이입니다.</h3>
-                        </li>
-                    </a>
-                    <a href="#">
-                        <li class="box-shadow starting">
+                     </a>
+                    </li>
+                    <li class="box-shadow starting">
+                     <a href="#">
                         <figure>
                             <img src="img/strating.svg" alt="시작하기">
                         </figure>
                         <h2>시작하기</h2>
                         <hr>
                         <h3>첫 단추를 제대로 끼워야 합니다!</h3>
-                        </li>
-                    </a>
-                    <a href="#">
+                     </a>
+                    </li>
                     <li class="box-shadow sever-setting">
+                     <a href="#">
                         <figure>
                             <img src="img/Sever-Setting.svg" alt="서버설정">
                         </figure>
                         <h2>서버 설정</h2>
                         <hr>
                         <h3>실내 장식 만큼 재미있는 것.</h3>
+                     </a>
                     </li>
-                    </a>
-                    <a href="#">
-                      <li class="box-shadow community-program">
+                    <li class="box-shadow community-program">
+                     <a href="#">
                         <figure>
                             <img src="img/Community.svg" alt="커뮤니티 프로그램">
                         </figure>
                         <h2>커뮤니티 프로그램</h2>
                         <hr>
                         <h3>HypeSquaders를 위한 광고,파트너를 위한 파티</h3>
-                     </li>
-                    </a>                    
-                    <a href="#">
-                        <li class="box-shadow nitro">
+                     </a>                    
+                    </li>
+                    <li class="box-shadow nitro">
+                     <a href="#">
                             <figure>
                                 <img src="img/Nitro.svg" alt="니트로">
                             </figure>
                         <h2>Nitro</h2>
                         <hr>
                         <h3>쓰러질 때까지 쇼핑하시면 안돼요! 저희가 도와드릴게요.</h3>
-                        </li>
-                    </a>
-                   <a href="#">
-                     <li class="box-shadow Bill">
+                     </a>
+                    </li>
+                    <li class="box-shadow Bill">
+                     <a href="#">
                         <figure>
                             <img src="img/Bill.svg" alt="청구서">
                         </figure>
                         <h2>청구서</h2>
                         <hr>
                         <h3>은행 계좌 잔액을 보는 기분</h3>
+                     </a>
                      </li>
-                    </a>
-                  <a href="#">
-                    <li class="box-shadow Security">
+                     <li class="box-shadow Security">
+                      <a href="#">
                         <figure>
                             <img src="img/Security.svg" alt="신뢰와보안">
                         </figure>
                         <h2>신뢰&보안</h2>
                         <hr>
                         <h3>안전하고 건전하게</h3>
+                      </a>
                     </li>
-                  </a>
-                  <a href="#">
                     <li class="box-shadow Questions">
+                     <a href="#">
                         <figure>
                             <img src="img/Questions.svg" alt="자주 묻는 질문">
                         </figure>
                         <h2>자주 묻는 질문</h2>
                         <hr>
                         <h3>스스로 해결해 보아요.</h3>
+                     </a>
                     </li>
-                  </a>
                 </ul>
             <div class="help">
                 <h2>도움을 받을 수 있는 다른 방법</h2>
             </div>
                 <section class="category-menu3">
                     <ul class="menu3">
-                        <a href="#">
-                            <li class="box-shadow game">
+                        <li class="box-shadow game">
+                         <a href="#">
                                 <figure>
                                     <img src="img/game.svg" alt="게임 개발자">
                                 </figure>
                             <h2>게임 개발자</h2>
                             <hr>
                             <h3>Discord의 API와 SDK를 이용한 봇,앱,게임 개발 지원의 집!</h3>
+                         </a>
                         </li>
-                    </a>
-                    <a href="#">
                         <li class="box-shadow Twitter">
+                         <a href="#">
                             <figure>
                                 <img src="img/Twitter.svg" alt="트위터">
                             </figure>
                             <h2>Twitter</h2>
                             <hr>
                             <h3>질문이 있으신가요? 저희에게 트윗을 보내주세요!</h3>
+                         </a>
                         </li>
-                    </a>
                  </ul>
                </section>        
         </section>
